--- a/files/vscpd/web/testws/event.html
+++ b/files/vscpd/web/testws/event.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+﻿<!DOCTYPE html>
 <html>
 <head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+<meta charset="UTF-8">
 <title>VSCP vscpws_event demo</title>
 <!-- Don't cache the page -->
 <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
@@ -11,12 +11,12 @@
 -->
 
 <script type="text/javascript" src="settings.js"></script>
-<script src="../lib/md5.js"></script>
+<script type="text/javascript" src="../lib/md5.js"></script>
 <script type="text/javascript" src="../lib/vscpwslib.js"></script>
 <script type="text/javascript" >
 
 	var add2ResponseTable = function( bResponse, msgitems ) {
-        var table = document.getElementById("myReponseTable");
+        var table = document.getElementById("myResponseTable");
         var row = table.insertRow(table.rows.length);
         var cell1 = row.insertCell(0);
         var txt;
@@ -26,9 +26,9 @@
         else {
             txt = "Negative reply ";
         }
-        StripRows("myReponseTable", 5);
+        StripRows("myResponseTable", 5);
   
-        cell1.innerHTML = "Reply: </strong>=" + txt + " - " + msgitems;
+        cell1.innerHTML = "Reply: <strong>=" + txt + "</strong> - " + msgitems;
               
         return;
     };
@@ -79,7 +79,7 @@
     {
         if ( vscpeventCtrl.isOpen() ) {
             console.log("ON Event");
-            var  data = new Array(0,0,0); // optional=0, zone=0, subzone=0
+            var  data = new Array(0,1,12); // optional=0, zone=0, subzone=0
             vscpeventCtrl.sendEvent( 0,                             // head
                                         VSCP_CLASS1_CONTROL,        // VSCP Class
                                         VSCP_TYPE_CONTROL_TURNON,   // VSCP Type
@@ -98,7 +98,7 @@
     {
         if ( vscpeventCtrl.isOpen() ) {
             console.log("OFF Event");
-            var  data = new Array(0,0,0);
+            var  data = new Array(0,1,12);
             vscpeventCtrl.sendEvent( 0,                             // head
                                         VSCP_CLASS1_CONTROL,        // VSCP Class
                                         VSCP_TYPE_CONTROL_TURNOFF,  // VSCP Type
@@ -117,7 +117,7 @@
     {
         if ( vscpeventCtrl.isOpen() ) {
             console.log("ON Event");
-            var  data = new Array(0,0,0); // optional=0, zone=0, subzone=0
+            var  data = new Array(0,1,12); // optional=0, zone=1, subzone=12
             vscpeventCtrl.sendEvent( 0,                             // head
                                         VSCP_CLASS1_INFORMATION,    // VSCP Class
                                         VSCP_TYPE_INFORMATION_ON,   // VSCP Type
@@ -136,7 +136,7 @@
     {
         if ( vscpeventCtrl.isOpen() ) {
             console.log("OFF Event");
-            var  data = new Array(0,0,0);
+            var data = new Array(0, 1, 12); // optional=0, zone=1, subzone=12
             vscpeventCtrl.sendEvent( 0,                             // head
                                         VSCP_CLASS1_INFORMATION,    // VSCP Class
                                         VSCP_TYPE_INFORMATION_OFF,  // VSCP Type
@@ -173,10 +173,10 @@
         console.log( val );
         var slidertxt = document.getElementById("sliderText"); 
         slidertxt.value = val;
-        var  data = new Array(138,0,val);
-        vscpeventCtrl.sendEvent( 0,                                     // head
-                                    VSCP_CLASS1_MEASUREMENT,            // VSCP Class
-                                    VSCP_TYPE_MEASUREMENT_TEMPERATURE, // VSCP Type
+        var  data = new Array(val,0,0);
+        vscpeventCtrl.sendEvent( 0,                                 // head
+                                    VSCP_CLASS1_CONTROL,            // VSCP Class
+                                    VSCP_TYPE_CONTROL_DIM_LAMPS,    // VSCP Type
                                     0,              // obid
                                     0,              // timestamp
                                     "",             // Use interface GUID
@@ -190,26 +190,28 @@
 <body>
 
 <h1>VSCP HTML5 websocket vscpws_event demo</h1>
-
+<p>
 <a href="index.html">Go back to main page</a>
+</p>
 <p>
 This demo demonstrates the vscpws_event object. With this object it is possible to send and receive VSCP events.
 </p>
-<br><br>
 <h3>Demo 1</h3>
+<p></p>
 <hr>
 <p>
 The first button sends <strong>CLASS1.CONTROL, Type=5/TurnOn</strong> and the second button sends
  <strong>CLASS1.CONTROL, Type=6/TurnOff</strong> 
 open a telnet session to the VSCP daemon to see the events.
 </p>
-<button onclick="vscpTurnOnEvent()">Send ON Event (Zone=0, SubZone=0)</button>
-<button onclick="vscpTurnOffEvent()">Send OFF Event (Zone=0, SubZone=0)</button>
-<br><br><br><br>
+<p>
+<button onclick="vscpTurnOnEvent()">Send TurnOn Event (Zone=1, SubZone=12)</button>
+<button onclick="vscpTurnOffEvent()">Send TurnOff Event (Zone=1, SubZone=12)</button>
+</p>
 <h3>Demo 2</h3>
 <hr>
 <p>
-The testStateButton demo wait for a <strong>CLASS1.INFORMATION, Type=3/ON</strong> to validate a sent 
+The StateButton demo wait for a <strong>CLASS1.INFORMATION, Type=3/ON</strong> to validate a sent 
 <strong>CLASS1.CONTROL, Type=5/TurnOn</strong> event 
 and will confirm an on state when it is received. The same is true for 
 <strong>CLASS1.INFORMATION, Type=3/OFF</strong> which is a
@@ -223,13 +225,17 @@ state of the button. </li>
 <strong>CLASS1.CONTROL, Type=6/TurnOff</strong> event and waits for <strong>CLASS1.INFORMATION, Type=3/OFF</strong>
 </ul>
 </p>
-<button onclick="vscpOnEvent()">Send ON Event (Zone=0, SubZone=0)</button>
-<button onclick="vscpOffEvent()">Send OFF Event (Zone=0, SubZone=0)</button>
-<br><br><br><br>
+<p>The righmost button in the statbutton demo will change state when the below buttons are pressed.</p>
+<p>
+<button onclick="vscpOnEvent()">Send ON Event (Zone=1, SubZone=12)</button>
+<button onclick="vscpOffEvent()">Send OFF Event (Zone=1, SubZone=12)</button>
+</p>
 <h3>Demo 3</h3>
-This demo can be used to send temperature events for the different temperature demos.<br>
+<p>
+This demo can be used to send temperature events for the different temperature demos.
+</p>
 <hr>
-<br>
+<p>
 <select id="tempEventSelect">
     <option value="0,10,6,0,0,-,138,0x00,0xE7">Send -25 Sensoridx=2 Normalized Integer. Degrees centigrade</option>
     <option value="0,10,6,0,0,-,138,0x00,0xE7">Send -20 Sensoridx=2 Normalized Integer. Degrees centigrade</option>
@@ -258,18 +264,21 @@ This demo can be used to send temperature events for the different temperature d
     <option value="0,20,9,0,0,-,0,0,0">Send Heartbeat</option>
 </select>
 <button onclick="vscpSendTempSelectEvent()">Send selected value</button>
-<br><br><br><br>
+</p>
 <h3>Demo 4</h3>
-This demo show how to use a HTML5 slider to send temperature measurements.
+<p>
+This demo show how to use a HTML5 slider to dim a lamp.
+</p>
 <hr>
-<div>
-<input id="slider1" type="range" min="-25" max="50" value="0" onchange="sliderUpdate(this.value)" /> 
+<p>
+<input id="slider1" type="range" min="0" max="100" value="0" onchange="sliderUpdate(this.value)" /> 
 <input id="sliderText" type="text" value="0" size="2" />
-</div>
-<br><br><br><br>
+</p>
 <h3>Demo 5</h3>
+<p>
 This demo show how to listen for events. All events received on the system is displayed here. Normally
 one sets a filter to limit the received events to the one of interest.
+</p>
 <hr>
 <div>
     <h4>Received events</h4>
@@ -277,8 +286,12 @@ one sets a filter to limit the received events to the one of interest.
 </div>
 <div>
     <h4>Received Response</h4>
-    <table id="myReponseTable"></table>
+    <table id="myResponseTable"></table>
 </div>
-
+    <br><br>
+    <hr>
+    Copyright &copy; 2000-2015 <a href="mailto:info@grodansparadis.com">email</a>,
+    <a href="http://www.grodansparadis.com">Paradise of the Frog / Grodans Paradis AB</a>
+    </div>
 </body>
 </html>
