--- a/files/vscpd/web/testws/testauth.html
+++ b/files/vscpd/web/testws/testauth.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
+<html>
+<head>
+<meta charset="UTF-8">
 <title>VSCP WebSocket authentication test</title>
 <!-- Don't cache the page -->
 <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 <META HTTP-EQUIV="Expires" CONTENT="-1">
 
-<script src="settings.js"></script>
-<script src="../lib/md5.js"></script>
+<script type="text/javascript" src="settings.js"></script>
+<script type="text/javascript" src="../lib/md5.js"></script>
 <script type="text/javascript" src="../lib/vscpwslib.js"></script>
 
-<script language="javascript" type="text/javascript">
+</head>
+<body>
+<script type="text/javascript">
 	var user = "admin";
 	var authdomain = "mydomain.com";
 	var passwordhash = "d50c3180375c27927c22e42a379c3f67";
@@ -25,16 +29,23 @@
   };
 
   window.onload = function() {
-    var url = 'ws://' + "127.0.0.1:8080"+ '/ws';
+    //var url = 'ws://' + "127.0.0.1:8080"+ '/ws';
+	var url = vscp_setting_url + '/ws';
     var num_messages = 0;
 
     websocket = new WebSocket(url);
     websocket.onopen = function(ev) {
       out('CONNECTED');
 	  console.log("Connected");
+	  
+	  var msg = 'C;CHALLENGE';
+      out('SENT: ' + msg);
+      websocket.send(msg);
+	  
       var msg = 'C;NOOP';
       out('SENT: ' + msg);
       websocket.send(msg);
+	  
     };
 	
     websocket.onclose = function(ev) {
@@ -56,7 +67,7 @@
 		// Check for positive reply
 		if ( '+' == res[0] ) {
 			if ( "AUTH0" == res[1] ) {
-				out('<span style="color: red;">Authentication 0 -  Login challang</span>');
+				out('<span style="color: red;">Authentication 0 -  Login challenge</span>');
 				var msg = "C;AUTH;" + user + ";" + vscp_make_websocket_auth_hash( user, passwordhash, res[2] );
 				websocket.send( msg );
 				out('SENT: ' + msg);
@@ -85,8 +96,16 @@
   };
 </script>
 
-<style> div {font: small Verdana; } </style>
 <h2>VSCP WebSocket authentication test</h2>
+<p>
+<a href="index.html">Go back to main page</a>
+</p>
+<div id="output" style="font: small Verdana;"></div>
 
-<div id="output"></div>
+    <br><br>
+    <hr>
+    Copyright &copy; 2000-2015 <a href="mailto:info@grodansparadis.com">email</a>,
+    <a href="http://www.grodansparadis.com">Paradise of the Frog / Grodans Paradis AB</a>
+    </div>
+</body>
 </html>
